<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="5dp" >

        <EditText
            android:id="@+id/dialog_rdbitmap_edittext"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_img_code"
            android:textColor="@color/black"
            android:singleLine="true"
            android:textColorHint="@color/light_gray"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/dialog_rdbitmap_img"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:contentDescription="@string/bitmap_validation_code" />

            <TextView
                android:id="@+id/dialog_rdbitmap_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cannt_see_clearly"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>