<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/translucent" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="450dp"
        android:layout_centerVertical="true"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <!-- 按钮 -->

        <LinearLayout
            android:id="@+id/forgot_password_btnarea"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/dialog_forgot_password_cancel_btn"
                android:layout_width="120dp"
                android:layout_height="54dp"
                android:background="@drawable/button_single_red"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/dialog_forgot_password_confirm_btn"
                android:layout_width="170dp"
                android:layout_height="54dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/button_single_blue"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </LinearLayout>
        <!-- 标题 -->

        <ImageView
            android:id="@+id/title"
            android:layout_width="320dp"
            android:layout_height="51.25dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/title_forgotpw"
            android:contentDescription="@string/nil" />

        <!-- 内容 -->

        <LinearLayout
            android:id="@+id/forgot_password_inputarea"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginTop="40dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/dialog_forgot_password_phone_input"
                style="@style/edittext_style1"
                android:layout_width="304dp"
                android:layout_height="54dp"
                android:layout_gravity="center_horizontal"
                android:hint="请输入您注册的手机号"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/light_gray"
                android:textSize="18sp" />
        </LinearLayout>
        <!-- 验证码 -->

        <LinearLayout
            android:id="@+id/forgot_password_verifyarea"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/forgot_password_inputarea"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/dialog_forgot_password_code_input"
                style="@style/edittext_style1"
                android:layout_width="160dp"
                android:layout_height="54dp"
                android:layout_gravity="center_horizontal"
                android:hint="请输入验证码"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/light_gray"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/dialog_rdbitmap_img"
                    android:layout_width="130dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/bitmap_validation_code" />

                <TextView
                    android:id="@+id/dialog_rdbitmap_change"
                    android:layout_width="wrap_content"
                    android:layout_height="14dp"
                    android:text="@string/cannt_see_clearly"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>