<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/translucent" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="450dp"
        android:layout_centerVertical="true"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <!-- 按钮 -->

        <LinearLayout
            android:id="@+id/change_password_btnarea"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/dialog_change_password_cancel_btn"
                android:layout_width="120dp"
                android:layout_height="54dp"
                android:background="@drawable/button_single_red"
                android:text="@string/previous"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/dialog_change_password_done_btn"
                android:layout_width="170dp"
                android:layout_height="54dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/button_single_blue"
                android:text="@string/done"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </LinearLayout>
        <!-- 标题 -->

        <ImageView
            android:id="@+id/title"
            android:layout_width="320dp"
            android:layout_height="51.25dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/title_modifypw"
            android:contentDescription="@string/nil" />

        <!-- 内容 -->

        <LinearLayout
            android:id="@+id/change_password_inputarea"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginTop="40dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/dialog_change_password_password_input"
                style="@style/edittext_style1"
                android:layout_width="304dp"
                android:layout_height="54dp"
                android:layout_gravity="center_horizontal"
                android:hint="请输入新的密码"
                android:password="true"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/light_gray"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/dialog_change_password_comfirm_input"
                style="@style/edittext_style1"
                android:layout_width="304dp"
                android:layout_height="54dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:hint="请再次输入密码"
                android:password="true"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/light_gray"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>